# estudo_etl

./: Dockerfile  app.py  pyproject.toml
