[tool.poetry]
name = "etl-estudo"
version = "0.1.0"
description = "Projeto de ETL com Streamlit"
authors = ["Felipe Gabriel <seu@email.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
